# easy_pbr

./: .gitmodules  CMakeLists.txt  MANIFEST.in  Makefile  README.md  build_and_install.sh  setup.py
cmake/: FindEasyGL.cmake  FindEasyPBR.cmake  FindGLFW.cmake  FindHalide.cmake  FindLIBIGL.cmake  FindPCL.cmake  Findnanoflann.cmake  HalideGenerator.cmake  halide.cmake
cmake/bak/: FindPCL.cmake
conda.recipe/: build.sh  meta.yaml  post-link.sh  run_test.py
conda_recipe/: build.sh  meta.yaml
config/: balls.cfg  bloom (copy).cfg  bloom.cfg  colormap.cfg  cuda_gl_interop.cfg  default_params.cfg  empty.cfg  head.cfg  high_poly.cfg  kitchen.cfg  latticenet.cfg  offscreen.cfg  pbr.cfg  primitives.cfg  shadows.cfg  shadows_soft.cfg  surfel.cfg  textures.cfg
data/: bunny.ply
data/sibl/Circus_Backstage/: Circus_Backstage.ibl
data/sibl/Desert_Highway/: Road_to_MonumentValley.ibl
data/sibl/Theatre_Center/: Theatre-Center_Env.hdr  Theatre_Center.ibl
data/textured/lantern/: lantern_description.txt  lantern_fbx.fbx  lantern_maya2016.mb
examples/: balls.py  bloom.py  colormap.py  cuda_gl_interop.py  head.py  high_poly.py  lines.py  offscreen.py  pbr.py  primitives.py  shadows.py  shadows_soft.py  show_img.py  surfel.py  textures.py  vtk_render.py  vtk_render2.py
examples/example_cpp/: CMakeLists.txt  Makefile  README.md  setup.py
examples/example_cpp/cmake/: FindEasyPBR.cmake
examples/example_cpp/config/: example.cfg
examples/example_cpp/include/example_cpp/: EasyPBRwrapper.h
examples/example_cpp/python/: example.py  mwe.py
examples/example_cpp/shaders/render/: blur_frag.glsl  toy_shader_frag.glsl  toy_shader_vert.glsl
examples/example_cpp/src/: EasyPBRwrapper.cxx  PyBridge.cxx  main.cxx
include/easy_pbr/: Camera.h  Frame.h  Gui.h  LabelMngr.h  Mesh.h  MeshGL.h  PyBridge.h  Recorder.h  Scene.h  SpotLight.h  SyntheticGenerator.h  Viewer.h
python/: empty.py  kitchen.py  latticenet.py  test.py
shaders/debug/: decode_gbuffer_frag.glsl  decode_gbuffer_vert.glsl  normals_decode_frag.glsl
shaders/equirectangular2cubemap/: equirectangular2cubemap_frag.glsl  equirectangular2cubemap_vert.glsl
shaders/fire_detector/: binarize_compute.glsl  write_positions_frag.glsl  write_positions_vert.glsl
shaders/ibl/: equirectangular2cubemap_frag.glsl  equirectangular2cubemap_vert.glsl  integrate_brdf_frag.glsl  integrate_brdf_vert.glsl  prefilter_frag.glsl  prefilter_vert.glsl  radiance2irradiance_frag.glsl  radiance2irradiance_vert.glsl
shaders/render/: apply_postprocess_frag.glsl  blend_bg_frag.glsl  blend_bg_vert.glsl  blur_frag.glsl  blur_vert.glsl  compose_final_compute.glsl  compose_frag.glsl  compose_vert.glsl  lines_frag.glsl  lines_vert.glsl  mesh_frag.glsl  mesh_vert.glsl  normals_frag.glsl  normals_geom.glsl  normals_vert.glsl  points_frag.glsl  points_gbuffer_vert.glsl  points_vert.glsl  shadow_map_frag.glsl  shadow_map_vert.glsl  surfels_frag.glsl  surfels_geom.glsl  surfels_vert.glsl  wireframe_frag.glsl  wireframe_vert.glsl
shaders/ssao/: ao_pass_compute.glsl  ao_pass_frag.glsl  ao_pass_vert.glsl  bilateral_blur_compute.glsl  bilateral_blur_frag.glsl  bilateral_blur_vert.glsl  depth_linearize_compute.glsl  depth_linearize_frag.glsl  depth_linearize_vert.glsl  geom_pass_frag.glsl  geom_pass_vert.glsl
shaders/uv_bake/: colormap_compute.glsl  mesh_frag.glsl  mesh_vert.glsl  uv_bake_frag.glsl  uv_bake_vert.glsl
src/: Camera.cxx  Camera.cxx.orig  Frame.cxx  Gui.cxx  LabelMngr.cxx  Mesh.cxx  MeshGL.cxx  PyBridge.cxx  PyBridgeSynth.cxx  Recorder.cxx  Scene.cxx  SpotLight.cxx  SyntheticGenerator.cxx  Viewer.cxx  main.cxx
